...
    private enum Constants {
        static let errorTitle = "Error"
        static let fileSaveFailed = "Failed to save file."
    }
    
    static func share(track: Track, viewController: UIViewController) {
        let alertController = UIAlertController(title: "Share Format", message: "Select file format to share", preferredStyle: .actionSheet)

        if UIDevice.current.userInterfaceIdiom == .pad, let popoverController = alertController.popoverPresentationController {
            popoverController.sourceView = viewController.view
            popoverController.sourceRect = CGRect(x: viewController.view.bounds.midX, y: viewController.view.bounds.midY, width: 0, height: 0)
            popoverController.permittedArrowDirections = []
        }
...
                } else {
                    ShareManager.shareFile(path: path, viewController: viewController)
                }
            }
        }
        
        let cancel = UIAlertAction(title: "Cancel", style: .cancel) { (action) in
            
        }
        
        alertController.addAction(kml)
        alertController.addAction(gpx)
        alertController.addAction(cancel)
...
