...
    
    private var viewModel: FileDetailsViewModel
    private var disposeBag: DisposeBag = DisposeBag()
    private weak var container: Container?
    
    private enum Constants {
        static let shareTitle = "Share"        
    }

    public init(container: Container, track: Track) {
        self.container = container
        viewModel = FileDetailsViewModel(track: track)
        super.init(nibName: nil, bundle: nil)
...
